<resources>
    <string name="app_name">OSGA</string>
    <string name="osga">欧索公安</string>
    <string name="home">首页</string>
    <string name="matter">事项中心</string>
    <string name="consult">咨询中心</string>
    <string name="user">个人中心</string>
    <string name="not_updated_yet">暂未更新</string>
    <string name="time_error">更新时间有误</string>
    <string name="updated_just_now">1分钟前更新</string>
    <string name="updated_at">%1$s前更新</string>
    <string name="sys_exit">退出</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>
    <string name="title">标题</string>
    <string name="module_title_news">新闻资讯</string>
    <string name="module_title_matters">办事事项</string>
    <string name="module_title_mattersCenter">事项中心</string>
    <string name="module_title_comment">咨询中心</string>
    <string name="module_title_notify">通知公告</string>
    <string name="module_title_pubsrv">便民服务</string>
    <string name="module_title_pub_info">信息互动</string>
    <string name="module_title_latest_notify">最新公告</string>
    <string name="module_title_clue_report">案件线索有奖举报</string>
    <string name="clue_report_title_content">&#160;&#160;&#160;&#160;&#160;&#160;本平台是吉林省警方推出的违法犯罪线索征集举报平台。只接受归属公安机关管辖的发生在吉林省范围内的非现场、非紧急的刑事、治安案件及其嫌疑人员相关线索，如有需要公安机关立即处理的紧急警情，请拨打"110"报警。\n
        &#160;&#160;&#160;&#160;&#160;&#160;举报人提供的线索如被公安机关使用，并在案件侦破中发挥作用，由公安机关视情予以奖励。
</string>
    <string name="clue_report_remind">特别提醒：案件线索举报提交成功后，请牢记系统反馈的案件举报编号并截屏（拍照）留存，
        此编号（图片）作为举报人领奖奖励的重要依据。
    </string>
    <string name="clue_sure_info">&#160;&#160;&#160;&#160;&#160;&#160;按照《吉林"互联网+公安"综合服务平台案件线索有奖举报办法》规定，匿名或使用虚假身份信息进行举报不发放奖金。
        </string>
    <string name="module_title_gaosulukuang">高速路况</string>
    <string name="module_title_12389">12389举报</string>
    <string name="module_title_map">地图服务</string>
    <string name="module_title_gaosu">高速路况</string>
    <string name="module_title_find_police">找警察</string>
    <string name="module_title_quick_alarm">一键报警</string>
    <string name="module_title_illegal_parking">违章停车</string>
    <string name="module_title_desktop">我的桌面</string>
    <string name="module_title_apps">我的桌面</string>
    <string name="module_title_my_counsling">我的咨询</string>
    <string name="module_title_profile">个人中心</string>
    <string name="module_title_register">用户注册</string>
    <string name="module_title_sys">地图服务</string>
    <string name="module_title_zhaoling">失物招领</string>
    <string name="module_title_quick_pay">快撤理赔</string>
    <string name="empty" />
    <string name="title_setting">个人设置</string>
    <string name="title_search_police_station">寻找警务室</string>
    <string name="title_search">搜索中心</string>
    <string name="launch_app_failure">启动应用失败！</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="submit">提交</string>
    <string name="view">查看</string>
    <string name="send_error_log">同时发送问题日志</string>
    <string name="max_size">1000</string>
    <string name="load_waitting">加载中，请稍候&#8230;</string>
    <string name="talk_with_police">警民恳谈</string>
    <string name="move_work">移动办事</string>
    <string name="police_wei_bo">公安微博</string>
    <string name="config_apps">配置</string>
    <string name="requires_item">该项必填</string>
    <string name="filter">过滤</string>
    <string name="search_by_key">关键字搜索</string>
    <string name="all">全部</string>
    <string name="not_lonin">点击登录</string>
    <string name="login_in">登录中</string>
    <string name="load_no_data">暂无数据</string>
    <string name="login_now">登录中,请稍候</string>
    <string name="register_now">注册中,请稍候</string>
    <string name="update_info_now">修改中,请稍候</string>
    <string name="neterror">网络不太给力</string>
    <string name="netunavaible">网络不可用，请检查网络</string>
    <string name="detial_info">详细信息</string>
    <string name="matters_shixiangmingcheng">事项名称：</string>
    <string name="matters_shenpizhuti">审批主体：</string>
    <string name="matters_shixiangxingzhi">事项性质：</string>
    <string name="matters_banjianleixing">办件类型：</string>
    <string name="matters_fadingqixian">法定期限：</string>
    <string name="matters_chengnuoqixian">承诺期限：</string>
    <string name="matters_banlididian">办理地点：</string>
    <string name="matters_banlishijian">办理时间：</string>
    <string name="matters_chuangkoudianhua">窗口电话：</string>
    <string name="matters_base_info">基本信息</string>
    <string name="matters_xukeyiju">许可依据</string>
    <string name="matters_banshicailiao">办事材料</string>
    <string name="matters_liuchengtu">流程图</string>
    <string name="matters_matter_fenlei">事项分类：</string>
    <string name="matters_address_fenlei">区域分类：</string>
    <string name="matters_arrea">区域</string>
    <string name="matters_manager_area">辖区</string>
    <string name="matters_type">分类</string>
    <string name="matters_matter_name">事项名称：</string>
    <string name="matters_matter_day">%s个工作日</string>
    <string name="matters_all">全部</string>
    <string name="matter_oper_title_declare1">申报</string>
    <string name="matter_apply_success">申报成功</string>
    <string name="matter_apply_fail">申报失败</string>
    <string name="matter_apply">事项申报</string>
    <string name="matter_title_declare2">申报办件</string>
    <string name="matter_declare_contact_phone">联系电话：</string>
    <string name="immediately_matter">即办件</string>
    <string name="promise_matter">承诺件</string>
    <string name="matters_not_acquired">事项未获取到</string>
    <string name="wobanjiantitle">我的办件</string>
    <string name="profile_matter_wait_solve">待办理%1$s%2$s%3$s</string>
    <string name="profile_matter_check_in">办理中%1$s%2$s%3$s</string>
    <string name="profile_matter_solved">已办结%1$s%2$s%3$s</string>
    <string name="profile_matter_reservation">预约件%1$s%2$s%3$s</string>
    <string name="apply_time">申请时间：</string>
    <string name="temporarily_nomatters">暂无办件</string>
    <string name="matters_name">办件名称</string>
    <string name="matters_unit">来办单位</string>
    <string name="matters_send_time">来办时间</string>
    <string name="matters_time_node">时间节点</string>
    <string name="matters_promise_time">承诺时间</string>
    <string name="matters_contact_people">联系人</string>
    <string name="matters_number">办件序号</string>
    <string name="matters_status">办理状态</string>
    <string name="matter_progress">办件进度查询</string>
    <string name="matter_id_banli_progress">居住证办理进度查询</string>
    <string name="matter_id_banli_address">居住证办理点查询</string>
    <string name="matter_id_progress">身份证办理进度查询</string>
    <string name="matter_car_weizhang">违法查询</string>
    <string name="matter_traffic">交通事故查询</string>
    <string name="matter_driver_scores">驾驶员记分查询</string>
    <string name="matter_anjian_info">案件查询</string>
    <string name="matter_rename">重名查询</string>
    <string name="matter_van_pass">货车通行证查询</string>
    <string name="matter_zero_pass">临时通行证查询</string>
    <string name="matter_zhengjian_type">证件类型:</string>
    <string name="matter_zhengjian_number">证件号码:</string>
    <string name="pubserv_banjian_progress_check">出入境办件进度查询</string>
    <string name="pubserv_banjian_progress">办件进度查询</string>
    <string name="pubserv_banjian_num">办件编号:</string>
    <string name="pubserv_check_banjian_progress">办理进度查询</string>
    <string name="pubserv_check_dim_code">二维码查询</string>
    <string name="matter_find_police">找警察</string>
    <string name="pubserv_check_progress_info">办件办理进度查询结果信息</string>
    <string name="pubserv_app_people">申请单位/人：</string>
    <string name="pubserv_app_project">申请项目：</string>
    <string name="pubserv_number">办件序号：</string>
    <string name="pubserv_banjian_status">办件状态：</string>
    <string name="pubserv_start_date">申请时间：</string>
    <string name="pubserv_accept_date">受理时间：</string>
    <string name="pubserv_end_date">办结时间：</string>
    <string name="pubserv_juzhuzheng_chaxun">居住证办理进度查询</string>
    <string name="pubserv_idnum">身份证号码：</string>
    <string name="pubserv_idnum2">身份证号：</string>
    <string name="pubserv_juzhuzheng_result">居住证办理结果信息</string>
    <string name="pubserv_name">姓名：</string>
    <string name="pubserv_username">用户名：</string>
    <string name="pubserv_sex">性别：</string>
    <string name="juzhuzheng_status">居住证状态：</string>
    <string name="is_lingzheng">是否领证：</string>
    <string name="pubserv_shengfenzheng_chaxun">身份证办理进度查询</string>
    <string name="pubserv_shouli_num">受理编号：</string>
    <string name="pubserv_status_shengfenzheng">办理状态：</string>
    <string name="news_pub_time">发布时间:%s</string>
    <string name="pubserv_anjianprogress_chaxun">案件办理过程查询</string>
    <string name="pubserv_jiejing_num">接警编号：</string>
    <string name="pubserv_chaxun_anjianprogress">查询案件办理过程</string>
    <string name="pubserv_baoAnTime">报案时间：</string>
    <string name="pubserv_banLiDanWei">办理单位：</string>
    <string name="pubserv_banLiStatus">办理状态：</string>
    <string name="pubserv_YourIdea">你的意见：</string>
    <string name="pubserv_PinJIa">满意度评价：</string>
    <string name="pubserv_manyi_1">非常满意</string>
    <string name="pubserv_manyi_2">一般满意</string>
    <string name="pubserv_manyi_3">不满意</string>
    <string name="pub_time">发布时间:</string>
    <string name="notify_title_summary">发布时间:%1$s&#160;&#160;&#160;发布人:%2$s</string>
    <string name="pubserv_send_manyi">发布满意度评价信息</string>
    <string name="result">查询结果</string>
    <string name="mainUI">桌面</string>
    <string name="chaXun">查询</string>
    <string name="fenLei">分类：</string>
    <string name="diZhi">地址：</string>
    <string name="residence_address">居住地址：</string>
    <string name="reply">浏览%s次</string>
    <string name="matter_accept_dept">受理单位:</string>
    <string name="matter_detail">事项详细</string>
    <string name="loading_title">加载中</string>
    <string name="exit_confirm">是否确认退出应用？</string>
    <string name="install_update_hint">新版本号%s:</string>
    <string name="update_now">是否立即更新?</string>
    <string name="exit_title">应用退出</string>
    <string name="version_upgrade">版本更新</string>
    <string name="download">下载</string>
    <string name="skip_version">暂不升级</string>
    <string name="start_download">开始下载</string>
    <string name="system_setting">系统设置</string>
    <string name="friend_introduce">好友推荐</string>
    <string name="noice_guide">新手引导</string>
    <string name="check_update">检测更新</string>
    <string name="doing">正在 %1$s</string>
    <string name="subscription">信息订阅</string>
    <string name="flow_control">流量控制</string>
    <string name="download_complete">下载完成，点击安装</string>
    <string name="create_dir_failure">创建文件下载目录失败</string>
    <string name="upgrade_file_download_failure">升级包下载失败</string>
    <string name="upgrade_file_corrupt">升级包损坏</string>
    <string name="md5check_for_apk">正在校验安装包&#8230;&#8230;&#8230;</string>
    <string name="sdcard_removed">存储卡已移除</string>
    <string name="sdcard_checking">正在检测存储卡，请稍候再试</string>
    <string name="sdcard_unmounted">存储卡未挂载</string>
    <string name="user_name">用户名/邮箱</string>
    <string name="user_passwrod">请输入密码</string>
    <string name="login">登 录</string>
    <string name="download_precent">已下载 %d%%</string>
    <string name="user_name_required">请输入用户名</string>
    <string name="user_pwd_required">请输入密码</string>
    <string name="file_download_failure">升级安装包下载失败</string>
    <string name="lastUpdateTime">更新于:%s</string>
    <string name="module_title_sys_setting">系统设置</string>
    <string name="update_password">修改密码：</string>
    <string name="new_password">新密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="old_password">旧密码：</string>
    <string name="update_information">保存修改</string>
    <string name="mine_question">我的咨询</string>
    <string name="mine_business">我的业务</string>
    <string name="register">注册</string>
    <string name="app_update">更新</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="register_mobile">手机号码：</string>
    <string name="confirm_number">验&#160;&#160;证&#160;&#160;码：</string>
    <string name="receive_confirm_number">获取验证码</string>
    <string name="invalidatepwdToast">请输入6-20位密码</string>
</resources>