<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingLeft="30dip"
              android:paddingRight="30dip">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_pop_bg_top"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">
        <LinearLayout
                android:id="@+id/layout_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true">
            <TextView
                    android:id="@+id/upgrade_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_upgrade"
                    android:textColor="@color/color_b"
                    android:textSize="18.0dip"/>
            <TextView
                    android:id="@+id/app_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@null"
                    android:textColor="@color/color_b"
                    android:textSize="14.0dip"/>
        </LinearLayout>
        <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="#cccccc"
                android:layout_below="@+id/layout_title"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        <TextView
                android:id="@+id/txt_upgrade_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_title"
                android:layout_marginTop="15dip"
                android:minWidth="300dip"
                android:singleLine="true"
                android:text="@string/install_update_hint"
                android:textColor="@color/color_d"
                android:textSize="16.0sp"/>
        <TextView
                android:id="@+id/txt_update_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_upgrade_info"
                android:layout_marginTop="2.0dip"
                android:layout_toRightOf="@id/icon"
                android:textColor="@color/color_d"
                android:textSize="14.0sp"/>
    </RelativeLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_pop_bg_bottom"
            android:paddingBottom="15.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:paddingTop="10.0dip">
        <TextView
                android:id="@+id/btn_logout"
                android:layout_width="0.0dip"
                android:layout_height="40dip"
                android:layout_weight="1.0"
                android:background="@drawable/common_btn_bg1"
                android:gravity="center"
                android:text="@string/app_update"
                android:textColor="@color/white"
                android:textSize="16.0dip"/>
        <TextView
                android:id="@+id/btn_logout_cancel"
                android:layout_width="0.0dip"
                android:layout_height="40dip"
                android:layout_marginLeft="10dip"
                android:layout_weight="1.0"
                android:background="@drawable/common_btn_bg2"
                android:gravity="center"
                android:text="@string/skip_version"
                android:textColor="@color/white"
                android:textSize="16.0dip"/>
    </LinearLayout>
</LinearLayout>